using skeleton ui

--- a/package.json
+++ b/package.json
@@ -1,42 +1,58 @@
 {
-	"name": "tv-recs-openai",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.4",
-		"@sveltejs/kit": "^2.5.26",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
-		"@typescript-eslint/eslint-plugin": "^8.4.0",
-		"@typescript-eslint/parser": "^8.4.0",
-		"autoprefixer": "^10.4.20",
-		"eslint": "^9.10.0",
-		"eslint-config-prettier": "^9.1.0",
-		"postcss": "^8.4.45",
-		"prettier": "^3.3.3",
-		"prettier-plugin-svelte": "^3.2.6",
-		"svelte": "^4.2.19",
-		"svelte-check": "^4.0.1",
-		"tailwindcss": "^3.4.10",
-		"tslib": "^2.7.0",
-		"typescript": "^5.5.4",
-		"vite": "^5.4.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-vercel": "^5.4.3",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/kv": "^2.0.0",
-		"esbuild": "^0.23.1",
-		"eventsource-parser": "^2.0.1",
-		"svelte-scrollto": "^0.2.0"
-	}
+  "name": "tv-recs-openai",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
+  },
+  "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.10.2",
+    "@sveltejs/adapter-auto": "^3.2.4",
+    "@sveltejs/kit": "^2.5.26",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.4.0",
+    "@typescript-eslint/parser": "^8.4.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "^4.2.19",
+    "svelte-check": "^4.0.1",
+    "tailwindcss": "^3.4.10",
+    "tslib": "^2.7.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.3",
+    "@playwright/test": "^1.28.1",
+    "@types/eslint": "^9.6.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^2.0.0",
+    "@skeletonlabs/tw-plugin": "0.4.0",
+    "vite-plugin-tailwind-purgecss": "0.3.3",
+    "@tailwindcss/typography": "0.5.15",
+    "@tailwindcss/forms": "0.5.9",
+    "@types/node": "22.5.4"
+  },
+  "type": "module",
+  "dependencies": {
+    "@floating-ui/dom": "1.6.10",
+    "@sveltejs/adapter-vercel": "^5.4.3",
+    "@vercel/analytics": "^1.3.1",
+    "@vercel/kv": "^2.0.0",
+    "esbuild": "^0.23.1",
+    "eventsource-parser": "^2.0.1",
+    "svelte-scrollto": "^0.2.0"
+  }
 }
