--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/kv": "^2.0.0",
     "esbuild": "^0.23.1",
-    "eventsource-parser": "^2.0.1",
-    "svelte-scrollto": "^0.2.0"
+    "eventsource-parser": "^2.0.1"
   }
 }
